Added Input and output decorator

--- a/AngularProject002_DataBindingDemoApp/src/app/app.component.html
+++ b/AngularProject002_DataBindingDemoApp/src/app/app.component.html
@@ -25,7 +25,7 @@
 	<p>{{text1.value}}</p>
 </form>
 <hr>
-	<app-person></app-person>
+	<app-person firstName = "Jitendra" lastName = "Kumar"></app-person>
 <hr>
 
 
