Life Cycle of component hook

--- a/AngularProject004-AdvancedComponentFeatures/src/app/app.component.html
+++ b/AngularProject004-AdvancedComponentFeatures/src/app/app.component.html
@@ -1,2 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <h1 style="color: green;">Welcome to {{ title }}!</h1>
+<form name = "f1">
+	<input type = "text" name = "t1" [(ngModel)]="title">
+</form>
