--- a/AngularProject005-TemplateDrivenForm/src/app/app.component.html
+++ b/AngularProject005-TemplateDrivenForm/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1 style="color: green;">Welcome to {{ title }}!</h1>
+<div>
+	<h1 style="color: green;">Welcome to {{ title }}!</h1>
+</div>
