--- a/AngularProject006-ModelDrivenForms/src/app/app.component.html
+++ b/AngularProject006-ModelDrivenForms/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1 style="color: green;">Welcome to {{ title }}!</h1>
+<h1 style="color: green;">Model Driven Form {{ title }}!</h1>
+<app-personform></app-personform>
