Created directive class and implemented required code

--- a/AngularProject008-CustomAttributeAndValidators/src/app/app.component.html
+++ b/AngularProject008-CustomAttributeAndValidators/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1 style="color: green;">Welcome to {{ title }}!</h1>
+<h1 style="color: green;">Custom Directive Demo Application {{ title }}!</h1>
+<hr>
+<span appShowAlert>This is a demo for custom directive !!</span>
