Created a component and service

--- a/AngularProject010-AngularService/src/app/app.component.html
+++ b/AngularProject010-AngularService/src/app/app.component.html
@@ -1,2 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1 style="color: green;">Welcome to {{ title }}!</h1>
+<div class="container">
+	<div class="panel panel-info">
+		<div class="panel-heading">
+			<h1 style="color: green;">Welcome to {{ title }}!</h1>
+		</div>
+		<div class="panel-body">
+			<app-employee></app-employee>
+		</div>
+	</div>
+</div>
