--- a/AngularProject012-Routing/src/app/app.component.html
+++ b/AngularProject012-Routing/src/app/app.component.html
@@ -1,2 +1,20 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1 style="color: green;">Welcome to {{ title }}!</h1>
+<div class = "container">
+	<div class="panel panel-success">
+		<div class="panel-heading">
+			<h1>Routing in {{ title }}!</h1>
+			<h2>Office Management</h2>
+		</div>
+		<div class="panel-body">
+			<nav>
+				<button class = "btn btn-warning" (click) = "goHome()">Departments</button>
+				<button class = "btn btn-warning" routerLink = "home">Go Home</button>
+				<button class = "btn btn-warning" routerLink = "emp">Employees</button>
+				<button class = "btn btn-warning" routerLink = "dept">Departments</button>
+				<button class = "btn btn-warning" routerLink = "junk">Not Found</button>
+			</nav>
+			<br>
+			<router-outlet></router-outlet>
+		</div>
+	</div>
+</div>
