--- a/AngularProject012-Routing/src/app/home/home.component.html
+++ b/AngularProject012-Routing/src/app/home/home.component.html
@@ -1,1 +1,2 @@
-<h2>This text is coming from home component !!</h2>
+<h4>This text is coming from home component !!</h4>
+<router-outlet></router-outlet>
